src/pydjinni/generator/objc/it/swift/error/expected/include/objc/TSTAsyncThrowingCallback.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "TSTFooError.h"
NS_SWIFT_NAME(AsyncThrowingCallback)
@protocol TSTAsyncThrowingCallback 
- (void)throwingError:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingError(completion:));
@end
